--- a/index.html
+++ b/index.html
@@ -6,3 +6,11 @@
   <li> <a href=" https://b23.tv/9ER45uU">我的B站个人空间</a> </li>
   <li> <a href="https://qm.qq.com/cgi-bin/qm/qr?k=5zb1j5r0szo2X58kxvf32__T_vF1Md88&noverify=0">我的QQ好友</a> </li>
 </ul>
+  
+<p>我准备了一些有趣的东西，你可以玩玩</p>
+  
+<ul>
+  <li> <a href="http://www.staggeringbeauty.com/">跟随鼠标移动的神经蛇</a> </li>
+  <li> <a href="https://luckyfuy.top/compass/">政治倾向测试</a> </li>
+  <li> <a href="https://sharkle.com/">一个神器的网页，点一下出现一个随机的好玩的网页</a> </li> 
+</ul>
